# hermes-agent-reasoning-proxy-router

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: configuration.md  security.md
examples/: reasoning_proxy_router.yaml
plugins/reasoning-proxy-router/: __init__.py  plugin.yaml
scripts/: install.sh
tests/: test_reasoning_proxy_router.py
