[project]
name = "hermes-agent-reasoning-proxy-router"
version = "0.1.1"
description = "Hermes Agent gateway plugin for routing messages to reasoning effort levels"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Iven Yasay" }]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6"]
dev = ["pytest>=8", "PyYAML>=6"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
